fix: made thead white-space nowrap and aligned forms

--- a/src/app.css
+++ b/src/app.css
@@ -106,6 +106,7 @@ table {
 
 table thead tr {
 	border-bottom: var(--border);
+	white-space: nowrap;
 }
 
 table tr:nth-child(even) {
